updated social share image. Healtcheck AWS interva

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,23 +4,23 @@
      <head>
          <meta charset="utf-8" />
          <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-         <meta name="description" content="Frankly helps you collect feedback easily through QR Codes" />
+         <meta name="description" content="Ask for feedback without asking for too much." />
          <meta name="author" content="Frankly " />
          <!-- HTML Meta Tags -->
        <!-- Facebook Meta Tags -->
        <meta property="og:url" content="https://franklyapp.nl">
        <meta property="og:type" content="website">
-       <meta property="og:title" content="Frankly helps you collect feedback easily through QR Codes">
-       <meta property="og:description" content="Frankly helps you collect feedback easily through QR Codes">
-       <meta property="og:image" content="{{ url_for('static',filename='assets/img/social.png') }}">
+       <meta property="og:title" content="Ask for feedback without asking for too much.">
+       <meta property="og:description" content="Get feedback from your customers through Text, Email, QR code or Link.">
+       <meta property="og:image" content="https://franklyappimages.s3.eu-central-1.amazonaws.com/social1.png">
  
        <!-- Twitter Meta Tags -->
        <meta name="twitter:card" content="summary_large_image">
        <meta property="twitter:domain" content="https://franklyapp.nl">
        <meta property="twitter:url" content="https://franklyapp.nl">
-       <meta name="twitter:title" content="Frankly helps you collect feedback easily through QR Codes">
-       <meta name="twitter:description" content="Frankly helps you collect feedback easily through QR Codes">
-       <meta name="twitter:image" content="{{ url_for('static',filename='assets/img/social.png') }}">
+       <meta name="twitter:title" content="Ask for feedback without asking for too much.">
+       <meta name="twitter:description" content="Get feedback from your customers through Text, Email, QR code or Link.">
+       <meta name="twitter:image" content="https://franklyappimages.s3.eu-central-1.amazonaws.com/social1.png">
  
  
  
@@ -157,7 +157,7 @@
                                     <!-- * * This can be a video, image, or just about anything else.-->
                                     <!-- * * Set the max width of your media to 100% and the height to-->
                                     <!-- * * 100% like the demo example below.-->
-                                    <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="{{ url_for('static',filename='assets/img/dem-screen.mp4') }}" type="video/mp4" /></video>
+                                    <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="{{ url_for('static',filename='assets/img/dem-screen1.mp4') }}" type="video/mp4" /></video>
                                 </div>
                             </div>
                         </div>
@@ -481,7 +481,7 @@ const myChart = new Chart(ctx, {
                                 <!-- * * This can be a video, image, or just about anything else.-->
                                 <!-- * * Set the max width of your media to 100% and the height to-->
                                 <!-- * * 100% like the demo example below.-->
-                                <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="{{ url_for('static',filename='assets/img/demp-screen.mp4') }}" type="video/mp4" /></video>
+                                <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="{{ url_for('static',filename='assets/img/demp-screen1.mp4') }}" type="video/mp4" /></video>
                             </div>
                         </div>
                     </div>
