--- a/website/templates/newstyle.html
+++ b/website/templates/newstyle.html
@@ -116,7 +116,7 @@
                                         <!-- * * This can be a video, image, or just about anything else.-->
                                         <!-- * * Set the max width of your media to 100% and the height to-->
                                         <!-- * * 100% like the demo example below.-->
-                                        <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="{{ url_for('static',filename='assets/img/dem-screen.mp4') }}" type="video/mp4" /></video>
+                                        <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="{{ url_for('static',filename='assets/img/dem-screen1.mp4') }}" type="video/mp4" /></video>
                                     </div>
                                 </div>
                             </div>
@@ -208,7 +208,7 @@
                                         <!-- * * This can be a video, image, or just about anything else.-->
                                         <!-- * * Set the max width of your media to 100% and the height to-->
                                         <!-- * * 100% like the demo example below.-->
-                                        <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="{{ url_for('static',filename='assets/img/demo-screen.mp4') }}" type="video/mp4" /></video>
+                                        <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="{{ url_for('static',filename='assets/img/demo-screen1.mp4') }}" type="video/mp4" /></video>
                                     </div>
                                 </div>
                             </div>
