last minute changes to homepage

--- a/website/templates/getinvited.html
+++ b/website/templates/getinvited.html
@@ -12,10 +12,12 @@
                
         <form method="POST">
                 <h3 align="center">Get invited to the Frankly Beta release!</h3>
-                <p>We'll release Frankly to only a handfull of users at a time, therefor we use a waitinglist. As soon as it's your turn to explore Frankly we'll send you an email!</p>
-                <div class="form-group">
-                  <label for="email">Email Address where we can send your personal Frankly invite</label><br><br>
-                  
+                <div class="alert alert-info" role="alert">
+                  There are currently 0 available spots in our beta program. Try again later.
+                </div>
+        
+                <p>Leave your email address to sign up to the waitinglist. As soon as more spots become available we'll send you an email!</p>
+                <div class="form-group">                  
                   <input
                     type="text"
                     id="email"
