--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -11,7 +11,7 @@
        <meta property="og:url" content="https://franklyapp.nl">
        <meta property="og:type" content="website">
        <meta property="og:title" content="Ask for feedback without asking for too much.">
-       <meta property="og:description" content="Get feedback from your customers through Text, Email, QR code or Link.">
+       <meta property="og:description" content="Get feedback from your customers through Text, Email, QR code or Link. Try it for free today">
        <meta property="og:image" content="https://franklyappimages.s3.eu-central-1.amazonaws.com/social1.png">
  
        <!-- Twitter Meta Tags -->
@@ -19,7 +19,7 @@
        <meta property="twitter:domain" content="https://franklyapp.nl">
        <meta property="twitter:url" content="https://franklyapp.nl">
        <meta name="twitter:title" content="Ask for feedback without asking for too much.">
-       <meta name="twitter:description" content="Get feedback from your customers through Text, Email, QR code or Link.">
+       <meta name="twitter:description" content="Get feedback from your customers through Text, Email, QR code or Link. Try it for free today">
        <meta name="twitter:image" content="https://franklyappimages.s3.eu-central-1.amazonaws.com/social1.png">
  
  
@@ -111,6 +111,7 @@
                          <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" href="/sign-in">Sign In</a></li>
                          <!--<a class="btn bg-secondary py-3 px-4 border-dark " href="/sign-up" >Try for free!</a>  -->
                          <a class="btn bg-secondary py-3 px-4 border-dark " href="sign-up" ><b>Try for free!</b></a>
+                        
                      {% endif%}
                      </ul>
                  </div>
@@ -331,7 +332,7 @@ const myChart = new Chart(ctx, {
                                 
                                 <!-- Feature item-->
                                 <div class="text-center">
-                                    <i class="bi-phone icon-feature d-block mb-3"></i>
+                                    <i class="bi bi-chat-left-text icon-feature d-block mb-3"></i>
                                     <h3 class="font-alt">SMS</h3>
                                     <p class="text mb-0">Send yourself a text message with your Frankly template and share it with your clients</p>
                                 </div>
@@ -424,7 +425,7 @@ const myChart = new Chart(ctx, {
                         <div class="col-md-6 mb-5">
                             <!-- Feature item-->
                             <div class="text-center">
-                                <i class="bi bi-chat icon-feature d-block mb-3"></i>
+                                <i class="bi bi-send-check icon-feature d-block mb-3"></i>
                                 <h3 class="font-alt">Send surveys easily</h3>
                                 <p class="text mb-0">Whether your users prefer a link, a SMS, email or QR code. Frankly has got you covered</p>
                             </div>
