--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -7,6 +7,10 @@
 <br><br>
         <h1>Sign up to Frankly </h1>
 
+        <div class="alert alert-info" role="alert">
+          To make sure you have the best experience with Frankly we invite only a limited number of users to join at a time.<br> Currently there are <b>{{remainingseats}} spots </b>left for the public beta. Create your account before free spots run out!
+        </div>
+
 <!-- revamped signup form-->
               <form method="POST" class="row g-3">
                 <div class="col-md-12">
