Updating final changes

--- a/website/templates/getinvited.html
+++ b/website/templates/getinvited.html
@@ -13,7 +13,7 @@
         <form method="POST">
                 <h3 align="center">Get invited to the Frankly Beta release!</h3>
                 <div class="alert alert-info" role="alert">
-                  There are currently 0 available spots in our beta program. Try again later.
+                  There are currently 0 available spots in our beta program. Leave your emailaddress to get invited.
                 </div>
         
                 <p>Leave your email address to sign up to the waitinglist. As soon as more spots become available we'll send you an email!</p>
